# vault404

./: .gitignore  Dockerfile  README.md  SESSION_NOTES.md  TODO.md  pyproject.toml  railway.json  requirements.txt  run.py
.github/workflows/: ci.yml
docs/: MARKETING_PLAN.md  medium-article.md
docs/articles/: devto-collective-intelligence.md
docs/marketing/: medium-article.md  reddit-posts.md  twitter-thread.md
integrations/: .aider.conf.yml  .cursorrules  README.md  langchain-tools.py  openai-functions.json
scripts/: generate_article_image.py  seed_community_brain.py
sdk/javascript/: README.md  package-lock.json  package.json
sdk/javascript/examples/: basic-usage.ts  with-langchain.ts
sdk/javascript/src/: client.ts
sdk/python/: README.md  pyproject.toml
sdk/python/src/vault404/: client.py
src/clawdex/: __init__.py
src/clawdex/sync/: community.py
src/vault404/: __init__.py  cli.py  mcp_server.py
src/vault404/api/: models.py  routes.py  server.py
src/vault404/search/: embeddings.py  strategies.py
src/vault404/security/: __init__.py  encryption.py  redactor.py
src/vault404/storage/: __init__.py  local_storage.py  mempalace_adapter.py  schemas.py
src/vault404/sync/: __init__.py  anonymizer.py  community.py  contribution.py
src/vault404/tools/: __init__.py  contributing.py  maintenance.py  querying.py  recording.py  vulnerability.py
tests/: test_api_auth.py  test_api_models.py  test_mcp_tools.py  test_ranker.py  test_semantic_search.py
vscode-extension/: CHANGELOG.md  README.md  package.json
vscode-extension/src/: extension.ts  vault404Client.ts
web/: index.html  netlify.toml  vercel.json
