[project]
name = "clawdex"
version = "0.1.2"
description = "Claw-dex: Collective AI coding agent brain - every verified fix makes ALL agents smarter"
readme = "README.md"
license = { text = "FSL-1.1-Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "GlobalLayer", email = "hello@globallayer.co" }
]
keywords = ["ai", "agents", "memory", "mcp", "claude", "coding", "llm", "knowledge-base", "error-tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/globallayer/clawdex"
Documentation = "https://github.com/globallayer/clawdex#readme"
Repository = "https://github.com/globallayer/clawdex"
Issues = "https://github.com/globallayer/clawdex/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
clawdex = "clawdex.cli:main"
clawdex-serve = "clawdex.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/clawdex"]

[tool.hatch.build.targets.wheel]
packages = ["src/clawdex"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
