[project]
name = "vault404"
version = "0.1.0"
description = "vault404: Collective AI coding agent brain - every verified fix makes ALL agents smarter"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "GlobalLayer", email = "hello@globallayer.co" }
]
keywords = ["ai", "agents", "memory", "mcp", "coding", "llm", "knowledge-base", "error-tracking", "vault404"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/globallayer/vault404"
Documentation = "https://github.com/globallayer/vault404#readme"
Repository = "https://github.com/globallayer/vault404"
Issues = "https://github.com/globallayer/vault404/issues"

[project.optional-dependencies]
api = [
    "fastapi>=0.109.0",
    "uvicorn>=0.25.0",
    "slowapi>=0.1.9",
]
semantic = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]
all = [
    "vault404[api,semantic,dev]",
]

[project.scripts]
vault404 = "vault404.cli:main"
vault404-serve = "vault404.mcp_server:main"
vault404-api = "vault404.api.server:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/vault404"]

[tool.hatch.build.targets.wheel]
packages = ["src/vault404"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
